# Question-Slayer

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  app.py  pyproject.toml  test_graph.py  test_graph.py.bak  test_rag_pipeline.py
.rules/: coder.md  debugger.md  planner.md
core/: __init__.py  config.py  graph.py  prompts.py  rag.py  utils.py
data/chroma_db/: chroma.sqlite3
docs/: LLM_WORKFLOW.md  WORKFLOW_QUICK_REFERENCE.md
docs/plans/: Langgraph_plan.md  RAG_pipeline_debug.md  RAG_plan.md  bloom_scoring_design.md  integration_plan.md  merge_plan.md  plan.md  prompt_template_design.md  prompt_template_implementation.md  question_restruct_plan.md  start_plan.md  tip_plan.md
pages/: 0_Home.py  1_Chat.py  2_Insight.py
scripts/: chunk_and_embed.py  read_pdf_pages.py  test_chunking.py
