[project]
name = "question-slayer"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.33.0",
    "langchain>=0.2.0",
    "langgraph>=0.1.0",
    "langchain-openai>=0.1.0",
    "langchain-community>=0.2.0",
    "chromadb>=0.5.0",
    "pdfplumber>=0.10.0",
    "python-dotenv>=1.0.0",
    "plotly>=5.20.0",
    "openai>=1.30.0",
    "pandas>=2.0.0",
    "tabulate>=0.9.0",
    "tiktoken>=0.7.0",
]
